--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a class="nav-link" href="#">Contact</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="get-it-now">Get it Now</a>
+              <a href="#" class="btn btn-success get-it-now">Get it Now</a>
             </li>
 
           </ul>
@@ -78,7 +78,7 @@
           </div>
         </div>
       </div>
-      <div class="dotted position-absolute bottom-0 start-0">
+      <div class="dotted position-absolute bottom-0 start-0 d-none d-xxl-block">
         <img src="img/dotted.png" title="" alt="">
       </div>
     </div>
@@ -113,7 +113,7 @@
           </div>
           <div class="col-lg-1"></div>
           <div class="col-lg-5" data-aos="fade-left">
-            <div class="mb-2"><img src="img/on-strategic-experiences-icon.svg"
+            <div class="mb-2"><img class="m-minus-10" src="img/on-strategic-experiences-icon.svg"
                 alt="On strategic experiences and visual appeal" title="On strategic experiences and visual appeal">
             </div>
             <h2>On strategic experiences and visual appeal</h2>
@@ -147,27 +147,135 @@
       </div>
     </div>
 
-    <div class="services1 position-relative">
+    <div class="services2 position-relative">
       <div class="container">
         <div class="row align-items-center">
 
           <div class="col-lg-5" data-aos="fade-right">
-            <div class="mb-2" style="margin-left:-13px;"><img src="img/perfect-for-operation-icon.svg"
+            <div class="mb-2"><img class="m-minus-10" src="img/perfect-for-operation-icon.svg"
                 alt="Perfect for Operation HR and Finance" title="Perfect for Operation HR and Finance">
             </div>
-            <h2>On strategic experiences and visual appeal</h2>
+            <h2>Perfect for Operation HR and Finance</h2>
             <p>Why I say old chap that is, spiffing off his nut cor blimey guvnor geeza bloke knees up bobby, sloshed
               arse William cack Richard. Bloke fanny around chesed knees up bobby, sloshed arse William cack Richard.
               fanny around chesed</p>
             <p><a href="#" class="read-more" title="Read More">Read More <img src="img/arrow-right.svg" alt="Read More"
                   title="Read More"></a></p>
           </div>
-          <div class="col-lg-1"></div>
-          <div class="col-lg-6" data-aos="fade-left">
+          <div class="col-lg-7" data-aos="fade-left">
             <img src="img/perfect-for-operation.png" alt="Perfect for Operation HR and Finance"
               title="Perfect for Operation HR and Finance">
           </div>
 
+        </div>
+      </div>
+      <div class="dotted position-absolute bottom-0 end-0 d-none d-xxl-block">
+        <img src="img/dotted.png" title="" alt="">
+      </div>
+    </div>
+
+    <div class="our-services">
+      <div class="container">
+        <div class="text-center">
+          <div class="mb-2" style="margin-left:-13px;"><img src="img/our-services.svg" alt="Our Services"
+              title="Our Services">
+          </div>
+          <h2>Our Services</h2>
+          <div class="row">
+            <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up">
+              <div class="box text-center py-4">
+                <img class="mb-3" src="img/collaborative-icon.svg" alt="Collaborative" title="Collaborative">
+                <h3>Collaborative</h3>
+                <p class="mb-2">Twit cras excuse Frenchs.</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up">
+              <div class="box text-center py-4">
+                <img class="mb-3" src="img/collaborative-icon.svg" alt="Collaborative" title="Collaborative">
+                <h3>Collaborative</h3>
+                <p class="mb-2">Twit cras excuse Frenchs.</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up">
+              <div class="box text-center py-4">
+                <img class="mb-3" src="img/collaborative-icon.svg" alt="Collaborative" title="Collaborative">
+                <h3>Collaborative</h3>
+                <p class="mb-2">Twit cras excuse Frenchs.</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up">
+              <div class="box text-center py-4">
+                <img class="mb-3" src="img/collaborative-icon.svg" alt="Collaborative" title="Collaborative">
+                <h3>Collaborative</h3>
+                <p class="mb-2">Twit cras excuse Frenchs.</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up">
+              <div class="box text-center py-4">
+                <img class="mb-3" src="img/collaborative-icon.svg" alt="Collaborative" title="Collaborative">
+                <h3>Collaborative</h3>
+                <p class="mb-2">Twit cras excuse Frenchs.</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up">
+              <div class="box text-center py-4">
+                <img class="mb-3" src="img/collaborative-icon.svg" alt="Collaborative" title="Collaborative">
+                <h3>Collaborative</h3>
+                <p class="mb-2">Twit cras excuse Frenchs.</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up">
+              <div class="box text-center py-4">
+                <img class="mb-3" src="img/collaborative-icon.svg" alt="Collaborative" title="Collaborative">
+                <h3>Collaborative</h3>
+                <p class="mb-2">Twit cras excuse Frenchs.</p>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up">
+              <div class="box text-center py-4">
+                <img class="mb-3" src="img/collaborative-icon.svg" alt="Collaborative" title="Collaborative">
+                <h3>Collaborative</h3>
+                <p class="mb-2">Twit cras excuse Frenchs.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="services2 position-relative">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6" data-aos="fade-right">
+            <img src="img/on-strategic-experiences2.png" alt="On strategic experiences and visual appeal"
+              title="On strategic experiences and visual appeal">
+          </div>
+          <div class="col-lg-1"></div>
+          <div class="col-lg-5" data-aos="fade-left">
+            <h2>On strategic experiences and visual appeal</h2>
+            <p>Faff about only a quid blower I don't want no agro bleeding chim pot burke tosser cras nice one boot
+              fanny.</p>
+            <div class="d-flex align-items-center mb-4">
+              <div class="me-4">
+                <img src="img/Collaborative-icon2.svg" alt="Collaborative" title="Collaborative">
+              </div>
+              <div>
+                <h4 class="mb-2">Collaborative</h4>
+                <p class="mb-0">Twit cras excuse Frenchs.</p>
+              </div>
+            </div>
+            <div class="d-flex align-items-center mb-4">
+              <div class="me-4">
+                <img src="img/collaborative-icon3.svg" alt="Collaborative" title="Collaborative">
+              </div>
+              <div>
+                <h4 class="mb-2">Collaborative</h4>
+                <p class="mb-0">Twit cras excuse Frenchs.</p>
+              </div>
+            </div>
+            <p class="mt-5"><a href="#" class="read-more" title="Read More">Read More <img src="img/arrow-right.svg"
+                  alt="Read More" title="Read More"></a></p>
+          </div>
         </div>
       </div>
       <div class="dotted position-absolute bottom-0 end-0">
@@ -175,8 +283,25 @@
       </div>
     </div>
 
+    <div class="news-letter">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-lg-2"></div>
+          <div class="col-lg-8">
+            <h2 class="text-white">Subscribe to Our Newsletter Every Week</h2>
+            <p>Why I say old chap that is, spiffing off his nut cor blimey guvnor geeza
+              knees up bobby, sloshed arse William cack</p>
+            <p class="mb-0 mt-5">
+              <a href="#" class="btn btn-success" title="Get it Now">Get it Now</a>
+            </p>
+          </div>
+          <div class="col-lg-2"></div>
+        </div>
+      </div>
+    </div>
+
+
   </section>
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
